# motion_detection

./: .gitignore  .gitlab-ci.yml  .travis.yml  Cargo.toml  Cross.toml  Dockerfile  README.md  env.example.sh  install-deb.sh
benches/: data.rs  image.rs
src/: compare.rs  home.rs  magick.rs  main.rs  request.rs
tests/: image.rs
