[package]
name = "motion_detection"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1"
reqwest = { version = "0.11", features = ["blocking"] }
rumqttc = { version = "0.20", default-features = false }
image-compare = "0.2"
image = "0.24"
openssl = { version = "0.10", features = ["vendored"] }

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[build]
pre-build = [
    "dpkg --add-architecture $CROSS_DEB_ARCH",
    "apt-get update && apt-get --assume-yes install libssl-dev:$CROSS_DEB_ARCH"
]

[[bench]]
name = "image"
harness = false

[profile.bench]
debug = true
