[package]
name = "motion_detection"
version = "0.1.0"
edition = "2021"

[features]
magick = ["dep:magick_rust"]
nomagick = ["dep:image-compare", "dep:image"]

[dependencies]
bytes = "1"
reqwest = { version = "0.11", features = ["blocking"] }
rumqttc = { version = "0.20" }
openssl = { version = "0.10", features = ["vendored"] }
magick_rust = { version = "0.18", optional = true }
image-compare = { version = "0.2", optional = true }
image = { version = "0.24", optional = true }

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "image"
harness = false

[profile.bench]
debug = true
