[package]
name = "motion_detection"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"

[dependencies]
bytes = "1"
reqwest = { version = "0.11", features = ["blocking"] }
rumqttc = { version = "0.21" }
openssl = { version = "0.10", features = ["vendored"] }
image-compare = { version = "0.2" }
image = { version = "0.24" }
chrono = "0.4"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[target.'cfg(target_arch = "x86_64")'.dev-dependencies]
criterion-perf-events = "0.3.0"
pprof = { version = "0.11", features = ["flamegraph", "criterion"] }
perfcnt = "0.8.0"

[[bench]]
name = "image"
harness = false

[profile.bench]
debug = true
